--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 </head>
 <body>
-  <model-viewer src="assets/Duck.gltf" 
-                ios-src="assets/RocketShip_1393.usdz"
+  <model-viewer src="assets/earth_ball.gltf" 
+                ios-src="assets/earth_ball.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a Duck" background-color="#70BCD1">
+                alt="A 3D model of a earth_ball" background-color="#70BCD1">
                   
   </model-viewer>
 </body>
