--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 </head>
 <body>
+  <h1>Web Test!!</h1>
   <model-viewer src="assets/earth_ball.gltf" 
                 ios-src="assets/earth_ball.usdz"
                 ar
