--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </head>
 <body>
   <h1>Web Test!!</h1>
-  <model-viewer src="assets/earth_ball.gltf" 
-                ios-src="assets/earth_ball.usdz"
+  <model-viewer src="assets/RocketShip_1393.gltf" 
+                ios-src="assets/RocketShip_1393.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
