--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <!-- <h1>Web Test!!</h1> -->
-  <model-viewer src="assets/RocketShip_1393.gltf" 
+  <model-viewer src="assets/earth.gltf" 
                 ios-src="assets/RocketShip_1393.usdz"
                 ar
                 auto-rotate 
