--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
 </head>
 <body>
-  <!-- <h1>Web Test!!</h1> -->
-  <model-viewer src="assets/earth.gltf" 
+  <h1>Web Test!!</h1>
+  <model-viewer src="RocketShip_1393.gltf" 
                 ios-src="assets/RocketShip_1393.usdz"
                 ar
                 auto-rotate 
                 camera-controls 
                 shadow-intensity="1" 
-                alt="A 3D model of a earth_ball" background-color="#70BCD1">
+                alt="A 3D model of a RocketShip" background-color="#70BCD1">
                   
   </model-viewer>
 </body>
