--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </head>
 <body>
-  <h1>Web Test!!</h1>
+  <!-- <h1>Web Test!!</h1>  -->
   <model-viewer src="RocketShip_1393.gltf" 
                 ios-src="assets/RocketShip_1393.usdz"
                 ar
