--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>&lt;model-viewer&gt; Augmented Reality</title>
+  <title>&lt;test_model-viewer&gt; Test Augmented Reality</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -40,7 +40,7 @@
 </head>
 <body>
   <!-- <h1>Web Test!!</h1>  -->
-  <model-viewer src="assets/RocketShip_1393.gltf" 
+  <model-viewer src="assets/earth_ball.gltf" 
                 ios-src="assets/RocketShip_1393.usdz"
                 ar
                 auto-rotate 
