--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <h1>Web Test!!</h1>
   <model-viewer src="assets/RocketShip_1393.gltf" 
                 ios-src="assets/RocketShip_1393.usdz"
+                poster="assets/screenshot.png"
                 ar
                 auto-rotate 
                 camera-controls 
