--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <h1>Web Test!!</h1>
-  <model-viewer src="assets/RocketShip_1393.gltf" 
+  <model-viewer src="assets/Duck.gltf" 
                 ios-src="assets/RocketShip_1393.usdz"
                 poster="assets/screenshot.png"
                 ar
